<resources>
    <string name="app_name">巡店达人</string>
    <string name="footer_bar_1">工作中心</string>
    <string name="footer_bar_2">巡店进度</string>
    <string name="footer_bar_3">通知公告</string>
    <string name="footer_bar_4">我的信息</string>

    <string name="xun_dian_ji_hua">巡店计划</string>
    <string name="ji_hua_an_pai">计划安排</string>
    <string name="wo_de_ri_cheng">我的日程</string>

    <string name="tj_xun_dian_ji_hua">添加巡店计划</string>
    <string name="bj_xun_dian_ji_hua">编辑巡店计划</string>

    <string name="tong_zhi">通知</string>
    <string name="gong_gao">公告</string>

    <string name="gong_zuo_zhong_xin_xun_dian_guan_li">巡店管理</string>
    <string name="gong_zuo_zhong_xin_xun_dian_ji_hua">计划管理</string>
    <string name="gong_zuo_zhong_xin_kao_qing">考勤</string>
    <string name="gong_zuo_zhong_xin_shu_ju_yu_shen_he">数据与审核</string>
    <string name="gong_zuo_zhong_xin_ke_hu_tuo_zhan">客户拓展</string>
    <string name="gong_zuo_zhong_xin_gong_ying_lian_guan_li">供应链管理</string>


    <string name="xun_dian_ding_wei">巡店定位</string>

    <string name="guan_bi">关闭</string>

    <string name="zhang_hao">账号</string>
    <string name="shu_ru_zhang_hao">输入账号</string>
    <string name="shu_ru_mi_ma">输入密码</string>
    <string name="mi_ma">密码</string>
    <string name="deng_lu">登录</string>
    <string name="ji_zhu_zhang_hao">  记住账号</string>
    <string name="tui_chu_deng_lu">退出登录</string>
    <string name="zhang_mi_bu">账号密码错误</string>

    <string name="tui_chu_ying_yiong">退出应用</string>
    <string name="qie_huan_zhang_hao">切换账号</string>
    <string name="kai_shi_xun_dian">开始巡店</string>

    <string name="biao_ti">标题</string>
    <string name="wen_ben">文本</string>
    <string name="shu_zi">数字</string>
    <string name="ri_qi">日期</string>
    <string name="xun_ze_qi">选择器</string>
    <string name="pai_zhao">拍照</string>
    <string name="xin">*</string>
    <string name="bao_cun">提交</string>

    <string name="ti_jiao_gzb">提交工作表</string>
    <string name="xiu_gai_ji_hua">修改录入</string>
    <string name="gong_zuo_lu_ru">工作录入</string>
    <string name="shan_chu">删除</string>

    <string name="ben_zhou_gong_zuo">周工作</string>
    <string name="bo_hui">驳回</string>

    <string name="ri_chang_kao_qing">日常考勤</string>
    <string name="kao_qing_ji_lu">考勤记录</string>
    <string name="qing_jia_guan_li">请假管理</string>
    <string name="pai_fang_guan_li">福利</string>


    <string name="qian_dao">签到签退</string>
    <string name="shang_ban_qian_dao">上班签到</string>
    <string name="xia_ban_qian_dao">下班签到</string>

    <string name="qing_jia_ji_lv">请假记录:</string>

    <string name="ti_jiao">提交</string>

    <string name="xun_dian_cha_xun">巡店查询</string>
    <string name="xun_dian_shen_he">审核编辑</string>
    <string name="bai_fang_cha_xun">拜访查询</string>
    <string name="ji_hua_shen_he">计划审核</string>
    <string name="qing_jia_shen_he">请假审核</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
</resources>
