<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/rg"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="@drawable/buttonstyle"
            >

    <RadioButton
        android:id="@+id/rb_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@drawable/bar_selector"
        android:layout_weight="1"
        android:drawableTop="@android:drawable/ic_menu_camera"
        android:button="@null"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="@string/footer_bar_1"/>

    <RadioButton
        android:id="@+id/rb_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_btn_speak_now"
        android:textColor="@drawable/bar_selector"
        android:layout_weight="1"
        android:button="@null"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="@string/footer_bar_2"/>

    <RadioButton
        android:id="@+id/rb_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@drawable/bar_selector"
        android:drawableTop="@android:drawable/ic_dialog_alert"
        android:layout_weight="1"
        android:button="@null"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="@string/footer_bar_3"/>

    <RadioButton
        android:id="@+id/rb_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_input_add"
        android:textColor="@drawable/bar_selector"
        android:layout_weight="1"
        android:button="@null"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:text="@string/footer_bar_4"/>

</RadioGroup>