<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        style="@style/GongZuoZhongXin.1LinearLayout"
        android:paddingTop="20dp">

        <LinearLayout
            style="@style/GongZuoZhongXin.2LinearLayout"
            android:layout_marginRight="15dp">
            <LinearLayout
                android:id="@+id/xun_dian_guan_li_LinearLayout"
                style="@style/GongZuoZhongXin.3LinearLayout">
                <ImageView
                    style="@style/GongZuoZhongXin.ImageView"
                    android:src="@drawable/xundian"
                    />
                <TextView
                    style="@style/GongZuoZhongXin.TextView"
                    android:text="@string/gong_zuo_zhong_xin_xun_dian_guan_li"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/GongZuoZhongXin.2LinearLayout">
            <LinearLayout
                android:id="@+id/button_ji_hua"
                style="@style/GongZuoZhongXin.3LinearLayout">
                <ImageView
                    style="@style/GongZuoZhongXin.ImageView"
                    android:src="@drawable/jihua"
                    />
                <TextView
                    style="@style/GongZuoZhongXin.TextView"
                    android:text="@string/gong_zuo_zhong_xin_xun_dian_ji_hua"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/GongZuoZhongXin.1LinearLayout"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:id="@+id/kao_qing_linearLayout"
            style="@style/GongZuoZhongXin.2LinearLayout"
            android:layout_marginRight="15dp">
            <LinearLayout
                android:id="@+id/gong_kao_qing_linearLayout"
                style="@style/GongZuoZhongXin.3LinearLayout">
                <ImageView
                    style="@style/GongZuoZhongXin.ImageView"
                    android:src="@drawable/kaoqin"
                    />
                <TextView
                    style="@style/GongZuoZhongXin.TextView"
                    android:text="@string/gong_zuo_zhong_xin_kao_qing"
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/shu_ju_yu_shen_he_linearLayout"
            style="@style/GongZuoZhongXin.2LinearLayout">
            <LinearLayout
                android:id="@+id/shu_ju_yu_shen_he_llinearLayout"
                style="@style/GongZuoZhongXin.3LinearLayout">
                <ImageView
                    style="@style/GongZuoZhongXin.ImageView"
                    android:src="@drawable/shenhe"
                    />
                <TextView
                    style="@style/GongZuoZhongXin.TextView"
                    android:text="@string/gong_zuo_zhong_xin_shu_ju_yu_shen_he"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/GongZuoZhongXin.1LinearLayout"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp">
        <LinearLayout
            android:id="@+id/ke_hu_yu_tuo_zhan_linearLayout"
            style="@style/GongZuoZhongXin.2LinearLayout"
            android:layout_marginRight="15dp">
            <LinearLayout
                android:id="@+id/button_ke_hu"
                style="@style/GongZuoZhongXin.3LinearLayout">
                <ImageView
                    style="@style/GongZuoZhongXin.ImageView"
                    android:src="@drawable/tuozhan"
                    />
                <TextView
                    style="@style/GongZuoZhongXin.TextView"
                    android:text="@string/gong_zuo_zhong_xin_ke_hu_tuo_zhan"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/GongZuoZhongXin.2LinearLayout">
            <LinearLayout style="@style/GongZuoZhongXin.3LinearLayout">
                <ImageView
                    style="@style/GongZuoZhongXin.ImageView"
                    android:src="@drawable/gongying"
                    />
                <TextView
                    style="@style/GongZuoZhongXin.TextView"
                    android:text="@string/gong_zuo_zhong_xin_gong_ying_lian_guan_li"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>