<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/IndexBuJuLinearLayout"
    android:background="@color/colorAccent">

    <include layout="@layout/title_nei_ye"/>

    <LinearLayout
        style="@style/IndexBuJuLinearLayout"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bottom_border">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/ri_chang_kao_qing"
                    style="@style/GongZuoZhongXin.3LinearLayout"
                    android:background="@drawable/right_border">
                    <ImageView
                        style="@style/GongZuoZhongXin.ImageView"
                        android:src="@drawable/xundian"
                        />
                    <TextView
                        style="@style/GongZuoZhongXin.TextView"
                        android:text="@string/ri_chang_kao_qing"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/qing_jia_guan_li"
                    style="@style/GongZuoZhongXin.3LinearLayout">
                    <ImageView
                        style="@style/GongZuoZhongXin.ImageView"
                        android:src="@drawable/xundian"
                        />
                    <TextView
                        style="@style/GongZuoZhongXin.TextView"
                        android:text="@string/qing_jia_guan_li"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        style="@style/IndexBuJuLinearLayout"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bottom_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/kao_qing_ji_lu"
                    style="@style/GongZuoZhongXin.3LinearLayout"
                    android:background="@drawable/right_border">
                    <ImageView
                        style="@style/GongZuoZhongXin.ImageView"
                        android:src="@drawable/jihua"
                        />
                    <TextView
                        style="@style/GongZuoZhongXin.TextView"
                        android:text="@string/kao_qing_ji_lu"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/pai_fang_guan_li"
                    style="@style/GongZuoZhongXin.3LinearLayout">
                    <ImageView
                        style="@style/GongZuoZhongXin.ImageView"
                        android:src="@drawable/jihua"
                        />
                    <TextView
                        style="@style/GongZuoZhongXin.TextView"
                        android:text="@string/pai_fang_guan_li"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/IndexBuJuLinearLayout"
        android:layout_weight="1">
    </LinearLayout>

</LinearLayout>