<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <!--标题-->
            <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="45dp"
                          android:layout_alignParentTop="true"
                          android:orientation="horizontal"
                          android:background="@drawable/bottom_border"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_fan_nei_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/fan_hui_hei"
                        android:onClick="DianJiFanHui"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/title_nei_ye"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/footer_bar_1"
                        android:gravity="center|center_vertical"
                        android:textColor="@color/heise"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ri_chang_ding_wei"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/ding_wei_qie_huan"/>

                </LinearLayout>

            </LinearLayout>


            <!--地图-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/gong_zuo_zhong_xin_button">

                <com.baidu.mapapi.map.MapView
                    android:id="@+id/bmapview_kao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"/>

            </LinearLayout>

            <!--文字信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                >

                <TextView
                    android:id="@+id/textview_kao_ri_qi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/heise"
                    android:text="2017-09-26"/>

                <LinearLayout
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_border">

                    <TextView
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="不吃饭不上班,打起精神赚钞票"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="上班时间09:00-16:00"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>

                <!--上午签到-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_width="6dp"
                            android:layout_height="6dp"
                            android:background="@drawable/heise_yuan"/>

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="上午签到"
                            android:textSize="16dp"
                            android:textColor="@color/heise"/>

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="right"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="08:55"/>

                    </LinearLayout>

                    <TextView
                        android:layout_marginLeft="11dp"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/huise6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="万达广场8号写字楼1112室"/>

                </LinearLayout>

                <!--下午签到-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_width="6dp"
                            android:layout_height="6dp"
                            android:background="@drawable/heise_yuan"/>

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="下午签到"
                            android:textSize="16dp"
                            android:textColor="@color/heise"/>

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:gravity="right"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="08:55"/>

                    </LinearLayout>

                    <TextView
                        android:layout_marginLeft="11dp"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/huise6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="万达广场8号写字楼1112室"/>

                </LinearLayout>

            </LinearLayout>

            <!--按钮-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_shang_ban_qian_dao"
                    android:text="@string/shang_ban_qian_dao"
                    style="@style/ButtonShangBanQianDao"
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginRight="3dp"
                    />

                <Button
                    android:id="@+id/button_xia_ban_qian_dao"
                    android:layout_marginLeft="3dp"
                    android:text="@string/xia_ban_qian_dao"
                    style="@style/ButtonXiaBanQianDao"
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    />

            </LinearLayout>


        </LinearLayout>
</LinearLayout>